   Suggested by Sumit Lohia.
 - Added getRepresentation(Variant variant) : Representation return the full representation 
   for a variant. By default, it will return 'variant' in case it is already a  
   representation (instance of Representation class). Suggested by Sumit Lohia.
 - Renamed Representation.getValue() into getText() to be more precise about intent.
 
1.0 RC1 (2006-12-26)
[Bugs fixed]
 - Handler now sets the response entity from the Result instance returned for the DELETE,
   POST and PUT methods. Reported by Randy Layman.
 - If the status is SUCCESS_NO_CONTENT or SUCCESS_RESET_CONTENT, the response entity is 
   not sent back to the client by HTTP server connectors.
 - Special characters in Template instance could conflict with special internal characters 
   (Regex). They are now quoted properly.
 - The Simple HTTP connector returned in invalid server address.
 - When a Restlet is normally initialized, the current response doesn't reset its "status" 
   property anymore.

[API changes]
 - Removed all deprecated classes and methods.
 - Replaced inner Series.Entry interface by the Parameter classes as the extra flexibility
   is not required and complicated the API and the Javadocs understanding.
 - Replaced Series and AbstractSeries by a single Series class.
 - Added a setMatchingMode() method on Template.
 - Added new constructor to Route taking a custom instance of Template.
 - Added protected getTargetRef(Req, Resp) and rewrite(Repr) methods to Redirector to allow 
   more customization.
 - Added "port" property to the ClientInfo class.
 - Added methods on Dispatcher for each main method (get, put, post, delete, options and head) 
   taking an instance of Reference. Following a remark from Alex Combs.
 - Deprecated the trace() method from Dispatcher.
 - Added an "identityCheck" property on LogService to turn on the IDENT identification 
   (RFC 1413). This would allow the default log format to display it.